# auth-app

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: main.py
src/apps/auth/: router.py  utils.py
src/apps/users/: password_helper.py  router.py  utils.py
src/core/: lifespan.py  middlewares.py  models.py  routers.py  settings.py
src/database/: helper.py  orm.py  tables.py  utils.py
src/env/: .env.template
