[tool.poetry]
name = "auth-for-test"
version = "0.1.0"
description = ""
authors = ["Bakminstof <Bakminstof@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.0"}
aiosqlite = "^0.20.0"
bcrypt = "^4.1.3"
pyjwt = "^2.8.0"
cryptography = "^42.0.8"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
mypy = "^1.10.1"
flake8 = "^7.1.0"
flake8-bugbear = "^24.4.26"
flake8-pie = "^0.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
